    inheritance mapping will produce results that are 
    identity-map compatible with that of the primary
    mapper [ticket:2151] (also in 0.6.8)

  - Fixed the error message emitted for "can't
    execute syncrule for destination column 'q';
    mapper 'X' does not map this column" to 
    reference the correct mapper.  [ticket:2163].
    Also in 0.6.8.

- sql
  - Changed the handling in determination of join
    conditions such that foreign key errors are
    only considered between the two given tables.
    That is, t1.join(t2) will report FK errors
    that involve 't1' or 't2', but anything 
    involving 't3' will be skipped.   This affects
    join(), as well as ORM relationship and
    inherit condition logic.

  - Some improvements to error handling inside
    of the execute procedure to ensure auto-close
    connections are really closed when very 
    unusual DBAPI errors occur.

  - metadata.reflect() and reflection.Inspector() 
    had some reliance on GC to close connections
    which were internally procured, fixed this.

  - Added explicit check for when Column .name
    is assigned as blank string [ticket:2140]

  - Fixed bug whereby if FetchedValue was passed
    to column server_onupdate, it would not
    have its parent "column" assigned, added
    test coverage for all column default assignment
    patterns.  [ticket:2147]  also in 0.6.8

- postgresql
  - Fixed the psycopg2_version parsing in the 
    psycopg2 dialect.

- documentation
  - Removed the usage of the "collections.MutableMapping"
    abc from the ext.mutable docs as it was being used
    incorrectly and makes the example more difficult
    to understand in any case.  [ticket:2152]

- examples
  - removed the ancient "polymorphic association"
    examples and replaced with an updated set of
    examples that use declarative mixins, 
    "generic_associations".   Each presents an alternative
    table layout.

0.7.0b4
=======
- general